--- a/Sprint1/Exercicio1/html/index.html
+++ b/Sprint1/Exercicio1/html/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="src/ex1.js"></script>
+	<script src="src/ex1B.js"></script>
 	<title>Bootcamp Helper Origins</title>
 </head>
 <body>
