correções do Ex1

--- a/Sprint1/Exercicio1/html/index.html
+++ b/Sprint1/Exercicio1/html/index.html
@@ -10,8 +10,8 @@
 <body>
 	<h2>Exercício 1b</h2>
 	<form action="" onsubmit="number_vogals()">
-		<label for="texto">Texto aqui:</label><br>
-		<input type="text" id="texto">
+		<label for="text">Texto aqui:</label><br>
+		<input type="text" id="text">
 		<input type="submit" value="Enviar">
 	</form>
 </body>
