--- a/Sprint2/Exercicio5/index.html
+++ b/Sprint2/Exercicio5/index.html
@@ -12,7 +12,7 @@
 		<label for="text">Texto aqui:</label><br>
 		<input type="text" id="text">
 	</form>
-	<button id="btn">CLICK</button>
+	<button id="button">CLICK</button>
 	<script type="module" src="src/ex5_Formulario.js"></script>
 </body>
 </html>
